# ruuster

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  flake.nix  launch_chat_demo.sh  prometheus.yml  run.sh  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  unit-tests.yml
apps/: .Cargo.toml  Cargo.toml
apps/src/: client.rs  metrics_server.rs  server.rs
apps/src/chat_client/: app.rs  event.rs  main.rs  request.rs  tui.rs  ui.rs  update.rs
apps/src/ruuster_chat/: app.rs  event.rs  input_handler.rs  main.rs  model.rs  ruuster.rs  update.rs  view.rs
apps/src/test_client/: README.md
apps/src/test_client/scenarios/: all_consumers.json  big_boy.json  bug_test.json  direct_exchange.json  doc_example.json  scenario1.json  small_test.json
apps/src/test_client/scripts/: big-boy  direct_exchange  run_test.sh  vizualize_scenario.py
apps/src/test_client/src/: conf_json_def.rs  conf_parser.rs  config_definition.rs  consumer.rs  docker_demo.rs  lib.rs  metadata_parser.rs  producer.rs  run_scenario.rs  scenario_builder.rs  scenario_validator.rs
common/: Cargo.toml
common/src/: lib.rs
crates/ruuster-acks/: Cargo.toml
crates/ruuster-acks/src/: lib.rs
crates/ruuster-core/: Cargo.toml
crates/ruuster-core/src/: lib.rs  queue.rs
crates/ruuster-internals/: Cargo.toml
crates/ruuster-internals/src/: conversions.rs  errors.rs  lib.rs  structs.rs
crates/ruuster-protos/: Cargo.toml  build.rs
crates/ruuster-protos/defs/: acks.proto  messages.proto  ruuster.proto  topology.proto
crates/ruuster-protos/src/: lib.rs
crates/ruuster-router/: Cargo.toml
crates/ruuster-router/src/: exchange.rs  lib.rs  registry.rs
crates/ruuster-router/src/strategies/: direct.rs  fanout.rs  header.rs  mod.rs  topic.rs
crates/ruuster-server/: Cargo.toml
crates/ruuster-server/src/: acks_service.rs  error.rs  lib.rs  main.rs  message_service.rs  server.rs  service.rs  topology_service.rs  zabor2432: I want to add append log (jou.md
crates/ruuster-server/src/domain/: consumer_manager.rs  message_handler.rs  mod.rs  topology_manager.rs
crates/ruuster-server/src/services/: acks_service.rs  message_service.rs  mod.rs  topology_service.rs
crates/ruuster-server/src/utils/: mod.rs
crates/ruuster-server/tests/: e2e_test.rs
example_scenarios/: Cargo.toml
example_scenarios/examples/: fanout_exchange.rs
examples/: fanout_exchange.rs  hello_world.rs  round_robin.rs
exchanges/: Cargo.toml
exchanges/src/: exchanges.rs
exchanges/src/types/: direct.rs  fanout.rs  mod.rs
grafana/dashboards/: ruuster.json
grafana/provisioning/dashboards/: dashboards.yml
internals/: Cargo.toml
internals/src/: lib.rs
proto/: helloworld.proto  mq.proto  ruuster.proto
protos/: Cargo.toml  build.rs
protos/defs/: ruuster.proto
protos/src/: conversions.rs  lib.rs  ruuster.rs
queues/: Cargo.toml
queues/src/: acks.rs  lib.rs  queues.rs
ruuster_grpc/: Cargo.toml
ruuster_grpc/src/: acks.rs  queues.rs  ruuster_grpc.rs  tests.rs  tests_utils.rs
src/: client.rs  demo.rs  lib.rs  server.rs
utils/: Cargo.toml
utils/src/: lib.rs
