[package]
name = "ruuster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ruuster-server"
path = "src/server.rs"

[[bin]]
name = "ruuster-client"
path = "src/client.rs"


[dependencies]
prost = "0.12.1"
serde = "1.0.192"
tokio = { version = "1.34.0",  features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"



[build-dependencies]
tonic-build = "0.10.2"
