[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"
[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
prost = "0.12.1"
tokio = { version = "1.32.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tonic = "0.10.2"
rand = "0.8"
exchanges = {path = "exchanges"}

[build-dependencies]
tonic-build = "0.10.2"
