[package]
name = "apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "./src/client.rs"

[[bin]]
name = "server"
path = "./src/server.rs"

[dependencies]
log = "0.4.20"
tonic = "0.10.2"
tokio = { version = "1.34.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
uuid = { version = "1.6.1", features = ["v4"]}
env_logger = "0.10.1"
exchanges = { path = "../exchanges" }
ruuster-grpc = { path = "../ruuster_grpc" }
protos = { path = "../protos" }
utils = { path = "../utils" }