[package]
name = "example_scenarios" 
version = "0.1.0"
edition = "2021"

[dependencies]
queues        = { path = "../queues" }
exchanges     = { path = "../exchanges" }
protos        = { path = "../protos" }
utils         = { path = "../utils" }
apps          = { path = "../apps" }
internals     = { path = "../internals" }

rand = "0.9.2"
