[package]
name = "exchanges"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/exchanges.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
prost = "0.12.4"
tonic = "0.11.0"
uuid = { version = "1.8.0", features = ["v4"] }
protos = { path = "../protos" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
lazy_static = "1.4.0"
env_logger = "0.11.3"

internals = { path = '../internals' }
