[package]
name = "queues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
uuid = { version = "1.8.0", features = ["v4"]}

protos = { path = "../protos" }
exchanges = { path = "../exchanges" }

