[package]
name = "ruuster-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruuster_grpc"
path = "src/ruuster_grpc.rs"

[dependencies]
log = "0.4.20"
env_logger = "0.11.3"
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.10.2"
uuid = { version = "1.6.1", features = ["v4"]}
exchanges = { path = "../exchanges" }
protos = { path = "../protos" }
utils = { path = "../utils" }

[dev-dependencies]
lazy_static = "1.4.0"

