[package]
name = "ruuster-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruuster_grpc"
path = "src/ruuster_grpc.rs"

[dependencies]
tracing = "0.1.4"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = "0.11.0"
uuid = { version = "1.8.0", features = ["v4"]}
metrics = "0.24"

exchanges = { path = "../exchanges" }
queues = { path = "../queues" }
protos = { path = "../protos" }
utils = { path = "../utils" }
internals =  { path = "../internals" }

[dev-dependencies]
lazy_static = "1.4.0"
tracing-subscriber = "0.3"

