[package]
name = "ruuster-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ruuster-internals = { path = "../ruuster-internals" }
ruuster-protos = { path = "../ruuster-protos" }

tokio = { version = "1.49.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tracing = "0.1"
tonic = "0.14.2"
uuid = { version = "1.8.0", features = ["v4"] }
