[package]
name = "ruuster-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.14.2"
prost = "0.14.2"
futures = "0.3" 
uuid = { version = "1.0", features = ["v4"] }

ruuster-protos = { path = "../ruuster-protos" }
ruuster-internals = { path = "../ruuster-internals" }
ruuster-core = { path = "../ruuster-core" }
ruuster-router = { path = "../ruuster-router" }
async-stream = "0.3.6"
tonic-reflection = "0.14.2"
opentelemetry = { version = "0.23" }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
opentelemetry-semantic-conventions = { version = "0.15" }
tracing = "0.1.4"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry", "json"] }
dashmap = "6.1.0"
thiserror = "2.0.18"

[[bin]]
name = "server"
path = "src/main.rs"

[dev-dependencies]
futures = "0.3"
uuid = { version = "1.8.0", features = ["v4"] }


